plugins {
    id 'java'
}

dependencies {
    implementation project(':lib')
    implementation 'org.tinylog:tinylog-api:2.7.0'
}

java.sourceCompatibility = JavaVersion.VERSION_17